Fix profile pic width on mobile

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -32,7 +32,6 @@
     margin: 0 auto 2rem;
     display: block;
     border-radius: 100%;
-    width: 50%;
     max-width: 300px;
   }
 }
